# lti_emailer

./: .gitignore  Dockerfile  README.md  Vagrantfile  batv_test.py  docker-entrypoint.sh  gunicorn.conf.py  gunicorn_prod.py  manage.py  pyproject.toml  supervisor.conf.j2
.git_template/: README
.git_template/hooks/: pre-commit
.github/workflows/: build.yml
lti_emailer/: canvas_api_client.py  exceptions.py  routers.py  urls.py  views.py  wsgi.py
lti_emailer/management/commands/: init_db.py  report_user_primary_email.py
lti_emailer/requirements/: base.txt  demo.txt  local.txt  production.txt  qa.txt  test.txt
lti_emailer/settings/: aws.py  base.py  demo.py  local.py  production.py  secure.py.example  secure.py.j2  test.py  unit_test.py
lti_emailer/tests/: test_canvas_api_client.py
mailgun/: api.py  decorators.py  exceptions.py  listserv_client.py  route_handlers.py  tests.py  urls.py  utils.py  views.py
mailgun/management/commands/: _mailgun_api.py  mailgun_delivery_times.py  mailgun_emails_failed.py  mailgun_emails_sent.py  query_events.py
mailgun/templates/mailgun/: non_member_bounce_back.html
mailgun/templates/mailgun/email/: base.html  bounce_back_access_denied.html  bounce_back_attachments_missing.html  bounce_back_does_not_exist.html  bounce_back_no_comm_channel_match.html  bounce_back_non_member.html  bounce_back_not_subscribed.html  bounce_back_readonly_list.html  bounce_back_size_limit_exceeded.html
mailgun/test_scripts/: tlt-2108-handle-missing-attachments-integration-test.py  tlt-2114-detect-bounce-loops-integration-test.py  tlt-2114-dev-environment-integration-test.py  tlt-2306-empty-bodies-integration-test.py
mailing_list/: __init__.py  api.py  apps.py  models.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
mailing_list/data_migrations/: lti_permissions.sql  supersender_permissions.sql
mailing_list/fixtures/: test_mailing_list.json  test_unsubscribed.json
mailing_list/listserv_clients/: exceptions.py  mailgun.py  tests.py
mailing_list/management/commands/: README.md  activate_all_lists.py  copy_to_dynamodb.py  course_usage_report.py  generate_course_emailer_report.py  make_access_levels_read_only.py  sync_listserv.py
mailing_list/migrations/: 0001_initial.py  0002_emailwhitelist.py  0003_data_add_whitelist_members.py  0004_remove_mailinglist_active.py  0005_auto_20150413_2122.py  0006_mailinglist_access_level.py  0007_auto_20150721_1814.py  0008_auto_20150724_1909.py  0009_auto_20150727_1530.py  0010_auto_20150827_1712.py  0011_auto_20150905_1942.py  0011_auto_20150908_1505.py  0012_supersender.py  0013_auto_20160715_1841.py  0013_auto_20160718_1945.py  0013_auto_20160719_1611.py  0013_create_course_settings_model_and_update_mailing_list_date_fields.py  0013_mailinglist_alwaysmailstaff.py  0014_add_new_permissions_for_roles.py  0015_alter_mailinglist_access_level.py
mailing_list/static/mailing_list/css/: app.css  mailing_list.css
mailing_list/static/mailing_list/js/: alphabet_pagination.js  app.js  list_details.js
mailing_list/templates/mailing_list/: _mailing_list_details.html  _mailing_list_members_by_name.html  admin_index.html  base.html  base_list_details.html  index.html  learner_index.html  list_details.html
mailing_list/templatetags/: enrollment_tags.py
mailing_list/tests/: __init__.py  test_mailing_list.py  test_util_methods.py
selenium_tests/: base_page_object.py  base_test_case.py  regression_suite.py
selenium_tests/canvas/page_objects/: canvas_base_page_object.py  canvas_masquerade_page_object.py
selenium_tests/lti_emailer/: Emailer_Permission_Test.py  Emailer_Test_Flow.py  Emailer_Test_Setup.py  HTMLTestRunner.py  emailer_base_test_case.py  emailer_check_member_page.py  emailer_check_member_page_tests.py  emailer_is_loaded_tests.py  emailer_main_page_tests.py  emailer_permission_tests.py  emailer_test.py  permission_test.py  regression_suite.py  test_setup.py
selenium_tests/lti_emailer/masquerade/: __init__.py
selenium_tests/lti_emailer/page_objects/: add_user_po.py  canvas_masquerade_page_object.py  emailer_base.py  emailer_base_page.py  emailer_base_page_object.py  emailer_mainpage.py  emailer_mainpage_page_object.py  emailer_member_list_page_object.py  emailer_permission_po.py  emailer_permission_service.py  emailer_test_setup_po.py  permission_service.py  pin_login.py  pin_login_page_object.py  pin_page.py
selenium_tests/lti_emailer/pin/: pin_login_page_object.py
selenium_tests/lti_emailer/test_data/: roles.xlsx  roles_access.xlsx
selenium_tests/masquerade/: canvas_base_page_object.py  canvas_masquerade_page_object.py
selenium_tests/pin/: pin_login_page_object.py
selenium_tests/pin/page_objects/: pin_page.py
vagrant/: django_postgres_bootstrap.sh  venv_bootstrap.sh
vagrant/manifests/: default.pp
