[project]
name = "lti-emailer"
version = "3.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.40,<2",
    "canvas-python-sdk>=2.1.2,<3",
    "oracledb>=2.4.1,<3",
    "django>=4.2,<5.0",
    "django-allow-cidr>=0.8.0,<1",
    "django-angular>=2.3,<3",
    "django-cached-authentication-middleware>=0.2.2,<1",
    "django-canvas-lti-school-permissions>=5.1.5,<6",
    "django-coursemanager>=0.8,<1",
    "django-ssm-parameter-store>=0.7,<1",
    "django-storages>=1.14.6,<2",
    "django-watchman>=1.3.0,<2",
    "flanker>=0.9.11,<1",
    "harvard-django-utils>=0.4,<1",
    "hiredis>=3.2.1,<4",
    "psycopg2-binary>=2.9.11,<3",
    "python-json-logger>=4.0.0,<5",
    "redis>=6.4.0,<7",
    "requests>=2.32.5,<3",
    "splunk-handler>=3.0.0,<4",
    "django-lti>=0.8.1,<1",
    "django-lti-authentication>=0.2.0,<1",
]

[tool.ruff.lint]
ignore = ["F403", "F405", "F841", "E741"]  # Globally ignore star-import warnings, unused vars, and ambiguous names

[tool.uv]
keyring-provider = "subprocess"

[[tool.uv.index]]
name = "private-registry"
url = "https://aws@huit-academic-technology-482956169056.d.codeartifact.us-east-1.amazonaws.com/pypi/uw/simple/"

[dependency-groups]
aws = [
    "gunicorn>=23.0.0,<24",
]
dev = [
    "ddt>=1.7.2,<2",
    "django-debug-toolbar>=6.0.0,<7",
    "django-extensions>=4.1,<5",
    "mock>=5.2.0,<6",
    "pyopenssl>=25.3.0,<26",
    "pyvirtualdisplay>=3.0,<4",
    "selenium>=4.37.0,<5",
    # "selenium-common>=1.8.0,<2",  # Archived, we could use git source instead of CodeArtifact
    "werkzeug>=3.1.3,<4",
    "xlrd>=2.0.2,<3",
]
